; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_ib/extr_mlx4_ib_sysfs.c_add_sysfs_port_mcg_attr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_ib/extr_mlx4_ib_sysfs.c_add_sysfs_port_mcg_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_ib_dev = type { %struct.mlx4_ib_iov_port* }
%struct.mlx4_ib_iov_port = type { i32 }
%struct.attribute = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"failed to create %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @add_sysfs_port_mcg_attr(%struct.mlx4_ib_dev* %0, i32 %1, %struct.attribute* %2) #0 {
  %4 = alloca %struct.mlx4_ib_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.attribute*, align 8
  %7 = alloca %struct.mlx4_ib_iov_port*, align 8
  %8 = alloca i32, align 4
  store %struct.mlx4_ib_dev* %0, %struct.mlx4_ib_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.attribute* %2, %struct.attribute** %6, align 8
  %9 = load %struct.mlx4_ib_dev*, %struct.mlx4_ib_dev** %4, align 8
  %10 = getelementptr inbounds %struct.mlx4_ib_dev, %struct.mlx4_ib_dev* %9, i32 0, i32 0
  %11 = load %struct.mlx4_ib_iov_port*, %struct.mlx4_ib_iov_port** %10, align 8
  %12 = load i32, i32* %5, align 4
  %13 = sub nsw i32 %12, 1
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.mlx4_ib_iov_port, %struct.mlx4_ib_iov_port* %11, i64 %14
  store %struct.mlx4_ib_iov_port* %15, %struct.mlx4_ib_iov_port** %7, align 8
  %16 = load %struct.mlx4_ib_iov_port*, %struct.mlx4_ib_iov_port** %7, align 8
  %17 = getelementptr inbounds %struct.mlx4_ib_iov_port, %struct.mlx4_ib_iov_port* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.attribute*, %struct.attribute** %6, align 8
  %20 = call i32 @sysfs_create_file(i32 %18, %struct.attribute* %19)
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %3
  %24 = load %struct.attribute*, %struct.attribute** %6, align 8
  %25 = getelementptr inbounds %struct.attribute, %struct.attribute* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @pr_err(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %26)
  br label %28

28:                                               ; preds = %23, %3
  %29 = load i32, i32* %8, align 4
  ret i32 %29
}

declare dso_local i32 @sysfs_create_file(i32, %struct.attribute*) #1

declare dso_local i32 @pr_err(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
